--- a/index.html
+++ b/index.html
@@ -3,8 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>Profile Card</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="contenedor">
+      <aside class="foto-perfil">
+        <img src="./img/foto-perfil.jpg" alt="Foto de perfil" />
+      </aside>
+
+      <main class="perfil-info">
+        <div class="contenedor-img top">
+          <img src="./img/shape-1.png" alt="" />
+        </div>
+
+        <div class="pefil-info-container">
+          <h1 class="nombre">John Doe</h1>
+          <h2 class="profesion">Desarrollador Web</h2>
+          <p class="descripcion">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est iure
+            laudantium illo dicta rem similique vel consequuntur magni, quasi
+            reprehenderit?
+          </p>
+          <a class="btn" href="#">Contáctame</a>
+
+          <hr />
+
+          <div class="redes-sociales">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="contenedor-img bottom">
+          <img src="./img/shape-2.png" alt="" />
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
